--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "dependencies": {
     "@fastify/autoload": "^6.0.1",
+    "@fastify/compress": "^8.0.1",
+    "@fastify/cors": "^10.0.1",
     "@fastify/swagger": "^9.0.0",
     "@fastify/swagger-ui": "^5.0.1",
     "axios": "^1.7.7",
